# tracelabel

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
docs/: pandas.md  trace-format.md
docs/design/: 00-overview.md  01-canonical-trace-format.md  02-database.md  03-config.md  04-cli.md  05-http-api.md  06-frontend.md  07-import-export.md  08-ai-assist.md  09-packaging-security.md  10-serve-scoped-datasets.md
docs/implementation/: 00-orchestration.md  01-interfaces.md  02-test-matrix.md
docs/implementation/packets/: P0-scaffold.md  P1-core-ctf.md  P10-demo-data.md  P11-packaging-ci-e2e.md  P2-config.md  P3-database.md  P4-adapters.md  P5-server-api.md  P6-export.md  P7-suggest.md  P8-cli.md  P9-frontend.md
e2e/: package-lock.json  package.json  playwright.config.ts  smoke.spec.ts  tsconfig.json  turn-tools.spec.ts
e2e/fixtures/: traces.jsonl
e2e/fixtures/turn/: config.yaml  traces.jsonl
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  queries.ts  types.ts
frontend/src/components/: AnnotationPane.tsx  AutoGrowTextarea.tsx  CheatSheet.tsx  DocumentPane.tsx  FieldRenderer.test.tsx  FieldRenderer.tsx  FinishedScreen.tsx  Header.tsx  OptionChips.tsx  OptionRow.tsx  SavedDot.tsx  ToolActivity.test.tsx  ToolActivity.tsx  ToolCallCard.test.tsx  ToolCallCard.tsx  TraceDrawer.tsx  TracePane.test.tsx  TracePane.tsx  TurnCard.tsx
frontend/src/keyboard/: useKeyboard.ts
frontend/src/mocks/: fixtures.ts
frontend/src/presentation/: turnGroups.test.ts  turnGroups.ts
frontend/src/state/: NavContext.test.tsx  NavContext.tsx  navReducer.test.ts  navReducer.ts  prefs.test.ts  prefs.ts
src/tracelabel/: __main__.py  cli.py  config.py  ctf.py  db.py  errors.py  export.py  server.py  suggest.py
src/tracelabel/adapters/: __init__.py  adk.py  datadog.py  loose.py
src/tracelabel/api/: app.py  labeling.py  models.py  routes.py  static.py
src/tracelabel/cli/: app.py  commands.py  options.py  output.py
src/tracelabel/config/: loader.py  models.py  presets.py  resolver.py  validation.py
src/tracelabel/ctf/: content.py  hashing.py  models.py  validation.py
src/tracelabel/db/: annotations.py  database.py  locking.py  migrations.py  tasks.py  traces.py
src/tracelabel/demo_data/: traces.jsonl
src/tracelabel/exporting/: serializers.py  service.py
src/tracelabel/imports/: labels.py  parsing.py  service.py
src/tracelabel/suggestions/: client.py  prompts.py  service.py
tests/: helpers.py  test_adapters.py  test_api.py  test_canonical.py  test_cli.py  test_config.py  test_ctf.py  test_db.py  test_demo_data.py  test_export.py  test_review.py  test_suggest.py
tests/fixtures/ctf/: reject_bad_role.jsonl  valid.jsonl  (+8 more)
(+25 files in other folders)
