[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracelabel"
version = "0.1.0"
description = "Local-first, zero-config labeling — keyboard-fast, no accounts, no server."
readme = "README.md"
authors = [{ name = "Daniel Kashkett" }]
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["labeling", "annotation", "llm", "agents", "eval", "traces"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2",
    "typer",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/Dkashkett/tracelabel"
Repository = "https://github.com/Dkashkett/tracelabel"
Issues = "https://github.com/Dkashkett/tracelabel/issues"

[project.optional-dependencies]
ai = ["litellm"]
dev = ["pytest", "hypothesis", "httpx", "ruff", "mypy", "pre-commit"]

[project.scripts]
tracelabel = "tracelabel.cli.app:run"

[tool.hatch.build.targets.wheel]
packages = ["src/tracelabel"]
artifacts = [
    "src/tracelabel/static/**",
    "src/tracelabel/demo_data/**",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/tracelabel/**",
    "README.md",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/tracelabel"]
